syntax = "proto3";

package com.road.yishi.proto.army;

message PhysicUpdateReqMsg {
  string reqGrid = 1;
  int32 mapId = 2;
}
